# LiveMTRX

./: Makefile  README.md  launch_for_wallpaper.sh  run.sh
LiveMTRX-sdl/: CMakeLists.txt  README.md
LiveMTRX-sdl/assets/: atlas_placeholder.txt
LiveMTRX-sdl/src/: README.md  main.c  renderer.h  renderer.m  sim.c  sim.h
LiveMTRX-sdl/src/shaders/: blur_h.metal  blur_v.metal  bright_extract.metal  crt.frag  crt_final.metal  glyph.frag.metal  glyph.vert  glyph.vert.metal  phosphor.metal  shared.metal
LiveMTRX-sdl/tools/: bake_atlas.py
src/: livemtrx.py  main.py
